Fix some spacing in body-one

--- a/style.css
+++ b/style.css
@@ -37,10 +37,6 @@ ul {
     gap: 15px;
 }
 
-/*.header-logo, .links {
-    display: flex;
-}*/
-
 a {
     text-decoration: none;
     font-size: 18px;
@@ -50,10 +46,11 @@ a {
 .body-one {
     display: flex;
     background-color: #1F2937;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     height: 400px;
     width: 100%;
+    gap: 50px;
 }
 
 .left-box {
